All_Component_DX/force-app/main/default/objects/SM_Checklist_Attachment__c/SM_Checklist_Attachment__c.object-meta.xml
<CustomObject>
    <description>Object to hold the checklist attachment references</description>
    <label>Checklist Attachment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Checklist Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>