All_Component_DX/force-app/main/default/objects/SM_Checklist_Attachment__c/fields/SM_Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Attachment_Name__c</fullName>
    <label>Attachment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>