All_Component_DX/force-app/main/default/objects/SM_Checklist_Attachment__c/fields/SM_Checklist__c.field-meta.xml
<CustomField>
    <fullName>SM_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to the related checklist record</description>
    <label>Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Checklist Attachments</relationshipLabel>
    <relationshipName>Checklist_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>