All_Component_DX/force-app/main/default/objects/SM_Checklist_Attachment__c/fields/SM_ContentDocumentLink_ID__c.field-meta.xml
<CustomField>
    <fullName>SM_ContentDocumentLink_ID__c</fullName>
    <description>This field will store ContentDocument link id.</description>
    <inlineHelpText>This field will store ContentDocument link id.</inlineHelpText>
    <label>ContentDocumentLink ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>