All_Component_DX/force-app/main/default/objects/SM_Checklist_Attachment__c/fields/SM_File_Size__c.field-meta.xml
<CustomField>
    <fullName>SM_File_Size__c</fullName>
    <label>File Size</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>