All_Component_DX/force-app/main/default/objects/SM_Checklist_Attachment__c/fields/SM_File_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>