All_Component_DX/force-app/main/default/objects/SM_Checklist_Attachment__c/fields/SM_Internal_Question_ID__c.field-meta.xml
<CustomField>
    <fullName>SM_Internal_Question_ID__c</fullName>
    <label>Internal Question ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>